--- a/samples/colab_vllm_integration.ipynb
+++ b/samples/colab_vllm_integration.ipynb
@@ -265,7 +265,7 @@
    "source": [
     "## Setting up the prompt for the specific language model\n",
     "\n",
-    "We set up the prompting style according to the demo at https://huggingface.co/spaces/huggingface-projects/llama-2-13b-chat/blob/main/app.py . We simplify the implementation a bit as we don't need chat history for this demo."
+    "We set up the prompting style according to the [Llama2 demo](https://huggingface.co/spaces/huggingface-projects/llama-2-13b-chat/blob/main/app.py). We simplify the implementation a bit as we don't need chat history for this demo."
    ]
   },
   {
@@ -279,12 +279,7 @@
     "\"\"\"\n",
     "\n",
     "def get_prompt(message: str, system_prompt: str = DEFAULT_SYSTEM_PROMPT) -> str:\n",
-    "    texts = [f'<s>[INST] <<SYS>>\\n{system_prompt}\\n<</SYS>>\\n\\n']\n",
-    "    # The first user input is _not_ stripped\n",
-    "    do_strip = False\n",
-    "    message = message.strip() if do_strip else message\n",
-    "    texts.append(f'{message} [/INST]')\n",
-    "    return ''.join(texts)"
+    "    return f'<s>[INST] <<SYS>>\\n{system_prompt}\\n<</SYS>>\\n\\n{message} [/INST]'"
    ]
   },
   {
