--- a/samples/colab_llamacpppython_integration.ipynb
+++ b/samples/colab_llamacpppython_integration.ipynb
@@ -302,15 +302,26 @@
      "data": {
       "text/markdown": [
        "```\n",
-       "  Of course! I'd be happy to provide information about Michael Jordan using the provided JSON schema.\n",
-       "{\n",
-       "\"first_name\": \"Michael\",\n",
-       "\"last_name\": \"Jordan\",\n",
-       "\"year_of_birth\": 1963,\n",
-       "\"num_seasons_in_nba\": 15\n",
-       "}\n",
-       "\n",
-       "I hope this helps! Let me know if you have any other questions.\n",
+       "  Of course! I'd be happy to provide information about Michael Jordan using the specified JSON schema. Here is the information you requested:",
+       "{",
+       "\"title\": \"AnswerFormat\",",
+       "\"type\": \"object\",",
+       "\"properties\": {",
+       "\"first_name\": {",
+       "\"title\": \"First Name\",",
+       "\"type\": \"string\",",
+       "\"description\": \"Michael's first name.\"",
+       "},",
+       "\"last_name\": {",
+       "",
+       "\"title\": \"Last Name\",",
+       "",
+       "\"type\": \"string\",",
+       "",
+       "\"description\": \"Michael's last name.\"",
+       "",
+       "},",
+       "\"year_",
        "```"
       ],
       "text/plain": [
