Refactoring transformerenforcer.py to integrations/transformers.py

--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -1878,11 +1878,12 @@
     "        if 'prefix_allowed_tokens_fn' in self.pipeline._forward_params:\n",
     "            raise RuntimeError(\"prefix_allowed_tokens_fn is already set, unsupported by LMFormatEnforcer.\")\n",
     "        lmformatenforcer = import_lmformatenforcer()\n",
+    "        from lmformatenforcer.integrations.transformers import build_transformers_prefix_allowed_tokens_fn\n",
     "        prompts = [prompt + \"\\n\" + self.prompt_suffix_format.format(json.dumps(self.json_schema)) \n",
     "                   for prompt in prompts]\n",
     "        parser = lmformatenforcer.JsonSchemaParser(self.json_schema)\n",
     "        pipeline = cast(Text2TextGenerationPipeline, self.pipeline)\n",
-    "        prefix_function = lmformatenforcer.build_transformers_prefix_allowed_tokens_fn(pipeline.tokenizer, parser)\n",
+    "        prefix_function = build_transformers_prefix_allowed_tokens_fn(pipeline.tokenizer, parser)\n",
     "        self.pipeline._forward_params['prefix_allowed_tokens_fn'] = prefix_function\n",
     "\n",
     "        result = super()._generate(\n",
