--- a/samples/colab_vllm_integration.ipynb
+++ b/samples/colab_vllm_integration.ipynb
@@ -299,7 +299,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lmformatenforcer import build_transformers_prefix_allowed_tokens_fn, CharacterLevelParser\n",
+    "from lmformatenforcer import CharacterLevelParser\n",
+    "from lmformatenforcer.integrations.transformers import build_transformers_prefix_allowed_tokens_fn\n",
     "from unittest import mock\n",
     "\n",
     "DEFAULT_MAX_NEW_TOKENS = 100\n",
