--- a/samples/colab_llamacpppython_integration.ipynb
+++ b/samples/colab_llamacpppython_integration.ipynb
@@ -31,14 +31,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install llama-cpp-python lm-format-enforcer huggingface-hub\n",
+    "!pip install llama-cpp-python lm-format-enforcer huggingface-hub\n",
     "\n",
     "# When running from source / developing the library, use this instead\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import sys\n",
-    "import os\n",
-    "sys.path.append(os.path.abspath('..'))\n",
+    "# %load_ext autoreload\n",
+    "# %autoreload 2\n",
+    "# import sys\n",
+    "# import os\n",
+    "# sys.path.append(os.path.abspath('..'))\n",
     "## os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
    ]
   },
