Notebook API migration

--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -145,7 +145,8 @@
     "%autoreload 2\n",
     "from typing import Tuple, Optional, Union, List\n",
     "import pandas as pd\n",
-    "from lmformatenforcer import JsonSchemaParser, CharacterLevelParser, RegexParser, StringParser, generate_enforced\n",
+    "from lmformatenforcer import JsonSchemaParser, CharacterLevelParser, RegexParser, StringParser\n",
+    "from lmformatenforcer.integrations.transformers import generate_enforced\n",
     "\n",
     "StringOrManyStrings = Union[str, List[str]]\n",
     "\n",
