Added batch mode example to vllm integration

--- a/samples/colab_vllm_integration.ipynb
+++ b/samples/colab_vllm_integration.ipynb
@@ -78,8 +78,8 @@
      "text": [
       "/home/noamgat/mambaforge/envs/vllm/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "2023-10-18 21:01:08,225\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
-      "2023-10-18 21:01:08,604\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+      "2023-11-01 00:01:40,977\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n",
+      "2023-11-01 00:01:41,234\tINFO util.py:159 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
      ]
     }
    ],
@@ -218,10 +218,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 10-18 21:01:10 llm_engine.py:72] Initializing an LLM engine with config: model='meta-llama/Llama-2-7b-chat-hf', tokenizer='meta-llama/Llama-2-7b-chat-hf', tokenizer_mode=auto, revision=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.float16, max_seq_len=4096, download_dir=None, load_format=auto, tensor_parallel_size=1, quantization=None, seed=0)\n",
-      "INFO 10-18 21:01:10 tokenizer.py:31] For some LLaMA V1 models, initializing the fast tokenizer may take a long time. To reduce the initialization time, consider using 'hf-internal-testing/llama-tokenizer' instead of the original tokenizer.\n",
-      "INFO 10-18 21:07:48 llm_engine.py:207] # GPU blocks: 1091, # CPU blocks: 512\n",
-      "WARNING 10-18 21:07:48 cache_engine.py:96] Using 'pin_memory=False' as WSL is detected. This may slow down the performance.\n"
+      "INFO 11-01 00:01:42 llm_engine.py:72] Initializing an LLM engine with config: model='meta-llama/Llama-2-7b-chat-hf', tokenizer='meta-llama/Llama-2-7b-chat-hf', tokenizer_mode=auto, revision=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.float16, max_seq_len=4096, download_dir=None, load_format=auto, tensor_parallel_size=1, quantization=None, seed=0)\n",
+      "INFO 11-01 00:01:42 tokenizer.py:31] For some LLaMA V1 models, initializing the fast tokenizer may take a long time. To reduce the initialization time, consider using 'hf-internal-testing/llama-tokenizer' instead of the original tokenizer.\n",
+      "INFO 11-01 00:01:47 llm_engine.py:207] # GPU blocks: 1091, # CPU blocks: 512\n",
+      "WARNING 11-01 00:01:47 cache_engine.py:96] Using 'pin_memory=False' as WSL is detected. This may slow down the performance.\n"
      ]
     }
    ],
@@ -290,7 +290,9 @@
     "\n",
     "We monkey-patch the ```Sampler``` class with our custom ```forward()``` method, using ```unittest.mock```.\n",
     "\n",
-    "We use our sampling params in order to sent the specific filter function with the request. Different requests can have different format enforcers."
+    "We use our sampling params in order to sent the specific filter function with the request. Different requests can have different format enforcers.\n",
+    "\n",
+    "There is an advanced loop for batch mode, it is done because for some reason we get better performance with it."
    ]
   },
   {
@@ -302,17 +304,48 @@
     "from lmformatenforcer import CharacterLevelParser\n",
     "from lmformatenforcer.integrations.transformers import build_transformers_prefix_allowed_tokens_fn\n",
     "from unittest import mock\n",
+    "from typing import Union, List\n",
+    "from vllm import RequestOutput\n",
     "\n",
     "DEFAULT_MAX_NEW_TOKENS = 100\n",
     "\n",
-    "def vllm_with_character_level_parser(llm: vllm.LLM, prompt: str, parser: Optional[CharacterLevelParser] = None) -> str:\n",
+    "ListOrStrList = Union[str, List[str]]\n",
+    "\n",
+    "def vllm_with_character_level_parser(llm: vllm.LLM, prompt: ListOrStrList, parser: Optional[CharacterLevelParser] = None) -> ListOrStrList:\n",
     "    with mock.patch.object(vllm.model_executor.layers.sampler.Sampler, 'forward', patched_forward):\n",
     "        prefix_function = build_transformers_prefix_allowed_tokens_fn(llm.get_tokenizer(), parser) if parser else None\n",
     "        sampling_params = SamplingParamsWithFilterFunction()\n",
     "        sampling_params.max_tokens = DEFAULT_MAX_NEW_TOKENS\n",
     "        sampling_params.logits_allowed_tokens_filter_function = prefix_function\n",
-    "        result = llm.generate(prompt, sampling_params=sampling_params)\n",
-    "        return result[0].outputs[0].text"
+    "        if isinstance(prompt, str):\n",
+    "            result = llm.generate(prompt, sampling_params=sampling_params)\n",
+    "            return result[0].outputs[0].text\n",
+    "        else:\n",
+    "            # This code works, but for some reason it gives slower generation time.\n",
+    "            # results = llm.generate(prompt, sampling_params=sampling_params)\n",
+    "            # return [result.outputs[0].text for result in results]\n",
+    "            \n",
+    "            # Batch mode, taking inspiration from https://github.com/vllm-project/vllm/blob/main/examples/llm_engine_example.py\n",
+    "            # I don't know why this is faster than simply calling llm.generate() with a list of prompts, but it is from my tests.\n",
+    "            prompts: List[str] = prompt\n",
+    "            \n",
+    "            engine = llm.llm_engine\n",
+    "            request_id = 0\n",
+    "            results = []\n",
+    "            while prompts or engine.has_unfinished_requests():\n",
+    "                if prompts:\n",
+    "                    prompt = prompts.pop(0)\n",
+    "                    engine.add_request(str(request_id), prompt, sampling_params)\n",
+    "                    request_id += 1\n",
+    "\n",
+    "                request_outputs: List[RequestOutput] = engine.step()\n",
+    "\n",
+    "                for request_output in request_outputs:\n",
+    "                    if request_output.finished:\n",
+    "                        results.append(request_output.outputs[0].text)\n",
+    "\n",
+    "            return results\n",
+    "        "
    ]
   },
   {
@@ -378,46 +411,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed prompts:   0%|          | 0/1 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processed prompts: 100%|██████████| 1/1 [00:01<00:00,  1.32s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Processed prompts: 100%|██████████| 1/1 [00:01<00:00,  1.36s/it]\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
        "```\n",
-       "  { \"first_name\": \"Michael\", \"last_name\": \"Jordan\", \"year_of_birth\": 1963, \"num_seasons_in_nba\": 15 }\n",
-       "\n",
-       "\n",
-       "\n",
-       "\n",
+       "  {\n",
+       "\"first_name\": \"Michael\",\n",
+       "\"last_name\": \"Jordan\",\n",
+       "\"year_of_birth\": 1963,\n",
+       "\"num_seasons_in_nba\": 15\n",
+       "}\n",
        "```"
       ],
       "text/plain": [
@@ -443,14 +449,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processed prompts: 100%|██████████| 1/1 [00:02<00:00,  2.12s/it]\n"
+      "Processed prompts: 100%|██████████| 1/1 [00:02<00:00,  2.13s/it]\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
        "```\n",
-       "  Of course, I'd be happy to provide you with information about Michael Jordan! Here is the information in the format you requested:\n",
+       "  Of course! Here's the requested information about Michael Jordan in the format specified:\n",
+       "\n",
        "{\n",
        "\"title\": \"AnswerFormat\",\n",
        "\"type\": \"object\",\n",
@@ -458,11 +465,12 @@
        "\"first_name\": {\n",
        "\"title\": \"First Name\",\n",
        "\"type\": \"string\",\n",
-       "\"description\": \"Michael Jordan's first name.\"\n",
+       "\"example\": \"Michael\"\n",
        "},\n",
        "\"last_name\": {\n",
-       "\n",
-       "\"title\": \"Last\n",
+       "\"title\": \"Last Name\",\n",
+       "\"type\": \"string\",\n",
+       "\"example\": \"J\n",
        "```"
       ],
       "text/plain": [
@@ -508,6 +516,109 @@
    "metadata": {},
    "source": [
     "As you can see, the enforced output matches the required schema, while the unenforced does not. We have successfully integrated with vLLM!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Batching example\n",
+    "\n",
+    "Now we demonstrate that the model can be used to generate text in batches. This is useful for generating text in parallel, which is much faster than generating text sequentially."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processed prompts: 100%|██████████| 1/1 [00:01<00:00,  1.37s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken for 1 player: 1.8789570331573486\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "```\n",
+       "  {\n",
+       "\"first_name\": \"Michael\",\n",
+       "\"last_name\": \"Jordan\",\n",
+       "\"year_of_birth\": 1963,\n",
+       "\"num_seasons_in_nba\": 15\n",
+       "}\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken for 19 players: 6.5615339279174805. Time per player: 0.3453438909430253\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "```\n",
+       "['  {\\n\"first_name\": \"Moses\",\\n\"last_name\": \"Malone\",\\n\"year_of_birth\": 1963,\\n\"num_seasons_in_nba\": 21\\n}', '  {\\n\"first_name\": \"Charles\",\\n\"last_name\": \"Barkley\",\\n\"year_of_birth\": 1963,\\n\"num_seasons_in_nba\": 16\\n}', '  {\\n\"first_name\": \"Dolph\",\\n\"last_name\": \"Schayes\",\\n\"year_of_birth\": 1921,\\n\"num_seasons_in_nba\": 15\\n}', '  {\\n\"first_name\": \"Julius\",\\n\"last_name\": \"Erving\",\\n\"year_of_birth\": 1952,\\n\"num_seasons_in_nba\": 11\\n}\\n\\n', '  {\\n\"first_name\": \"Jerry\",\\n\"last_name\": \"Lucas\",\\n\"year_of_birth\": 1944,\\n\"num_seasons_in_nba\": 12\\n}', '  {\\n\"first_name\": \"Bob\",\\n\"last_name\": \"Pettit\",\\n\"year_of_birth\": 1922,\\n\"num_seasons_in_nba\": 11\\n}\\n\\n', '  {\\n\"first_name\": \"Bill\",\\n\"last_name\": \"Russell\",\\n\"year_of_birth\": 1934,\\n\"num_seasons_in_nba\": 13\\n}\\n\\n', '  {\\n\"first_name\": \"Larry\",\\n\"last_name\": \" Bird\",\\n\"year_of_birth\": 1956,\\n\"num_seasons_in_nba\": 13\\n}\\n\\n\\n\\n', '  {\\n\"first_name\": \"Earvin\",\\n\"last_name\": \"Johnson\",\\n\"year_of_birth\": 1959,\\n\"num_seasons_in_nba\": 13\\n}\\n\\n', '  {\\n\"first_name\": \"Hakeem\",\\n\"last_name\": \"Olajuwon\",\\n\"year_of_birth\": 1963,\\n\"num_seasons_in_nba\": 18\\n}', '  {\\n\"first_name\": \"Clyde\",\\n\"last_name\": \"Drexler\",\\n\"year_of_birth\": 1962,\\n\"num_seasons_in_nba\": 10\\n}', '  {\\n\"first_name\": \"Bob\",\\n\"last_name\": \"Cousy\",\\n\"year_of_birth\": 1928,\\n\"num_seasons_in_nba\": 13\\n}\\n\\n\\n\\n', '  {\\n\"first_name\": \"George\",\\n\"last_name\": \"Mikan\",\\n\"year_of_birth\": 1924,\\n\"num_seasons_in_nba\": 10\\n}\\n\\n\\n\\n', '  {\\n\"first_name\": \"Timothy\",\\n\"last_name\": \"Duncan\",\\n\"year_of_birth\": 1976,\\n\"num_seasons_in_nba\": 19\\n}\\n\\n\\n\\n', '  {\\n\"first_name\": \"John\",\\n\"last_name\": \"Havlicek\",\\n\"year_of_birth\": 1949,\\n\"num_seasons_in_nba\": 16\\n}\\n\\n\\n\\n', '  {\\n\"first_name\": \"Elvin\",\\n\"last_name\": \"Hayes\",\\n\"year_of_birth\": 1945,\\n\"num_seasons_in_nba\": 10\\n}\\n\\n\\n\\n', '  {\\n\"first_name\": \"Patrick\",\\n\"last_name\": \"Ewing\",\\n\"year_of_birth\": 1962,\\n\"num_seasons_in_nba\": 17\\n}\\n\\n\\n\\n\\n', '  {\\n\"first_name\": \"Nate\",\\n\"last_name\": \"Archibald\",\\n\"year_of_birth\": 1953,\\n\"num_seasons_in_nba\": 11\\n}\\n\\n\\n\\n\\n', '  {\\n\"first_name\": \"Oscar\",\\n\"last_name\": \"Robertson\",\\n\"year_of_birth\": 1938,\\n\"num_seasons_in_nba\": 13\\n}\\n\\n\\n\\n\\n']\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from time import time\n",
+    "\n",
+    "players = ['Michael Jordan', 'Tim Duncan', 'Larry Bird', 'Magic Johnson', 'Patrick Ewing', \n",
+    "           'Hakeem Olajuwan', 'Nate Archibald', 'Charles Barkley', 'Bob Cousy', 'Clyde Drexler', \n",
+    "           'Julius Erving', 'John Havlicek', 'Elvin Hayes', 'Jerry Lucas', 'Moses Malone',\n",
+    "           'George Mikan', 'Bob Pettit', 'Oscar Robertson', 'Bill Russell', 'Dolph Schayes']\n",
+    "prompts = []\n",
+    "for player in players:\n",
+    "    question = f'Please give me information about {player}. You MUST answer using the following json schema: '\n",
+    "    question_with_schema = f'{question}{AnswerFormat.schema_json()}'\n",
+    "    prompt = get_prompt(question_with_schema)\n",
+    "    prompts.append(prompt)\n",
+    "\n",
+    "start = time()\n",
+    "one_player_result = vllm_with_character_level_parser(llm, prompts[0], JsonSchemaParser(AnswerFormat.schema()))\n",
+    "end = time()\n",
+    "print(f'Time taken for 1 player: {end - start}s')\n",
+    "display_content(one_player_result)\n",
+    "\n",
+    "start = time()\n",
+    "all_results = vllm_with_character_level_parser(llm, prompts[1:], JsonSchemaParser(AnswerFormat.schema()))\n",
+    "end = time()\n",
+    "print(f'Time taken for {len(prompts)-1} players: {end - start}. Time per player: {(end - start)/(len(prompts)-1)}')\n",
+    "display_content(all_results)"
    ]
   }
  ],
