--- a/samples/colab_llamacpppython_integration.ipynb
+++ b/samples/colab_llamacpppython_integration.ipynb
@@ -70,7 +70,7 @@
     "from llama_cpp import Llama\n",
     "from huggingface_hub import hf_hub_download\n",
     "downloaded_model_path = hf_hub_download(repo_id=\"TheBloke/Llama-2-7b-Chat-GGUF\", filename=\"llama-2-7b-chat.Q5_K_M.gguf\")\n",
-    "llm = Llama(model_path=downloaded_model_path, logits_all=True)"
+    "llm = Llama(model_path=downloaded_model_path)"
    ]
   },
   {
