--- a/samples/colab_haystackv2_integration.ipynb
+++ b/samples/colab_haystackv2_integration.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LM Format Enforcer Integration with Haystack\n",
+    "# LM Format Enforcer Integration with Haystack v2\n",
     "\n",
-    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/noamgat/lm-format-enforcer/blob/main/samples/colab_haystack_integration.ipynb\">\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/noamgat/lm-format-enforcer/blob/main/samples/colab_haystackv2_integration.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install haystack[inference] lm-format-enforcer accelerate bitsandbytes cpm_kernels huggingface_hub\n",
+    "!pip install farm-haystack lm-format-enforcer accelerate bitsandbytes cpm_kernels huggingface_hub\n",
     "\n",
     "# When running from source / developing the library, use this instead\n",
     "# %load_ext autoreload\n",
@@ -44,7 +44,7 @@
     "# import sys\n",
     "# import os\n",
     "# sys.path.append(os.path.abspath('..'))\n",
-    "## os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
+    "# os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
    ]
   },
   {
@@ -128,28 +128,26 @@
    "source": [
     "### Loading the model\n",
     "\n",
-    "We load the model directly using transformers API in order to pass precise quantization parameters to it. Afterwards we initialize the LlamaIndex `HuggingFaceLLM` from it"
+    "We load the model by creating a `HuggingFaceLocalGenerator` with precise quantization parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/noamgat/mambaforge/envs/commentranker/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:01<00:00,  1.08it/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:02<00:00,  1.10s/it]\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
     "from transformers import AutoConfig\n",
-    "from haystack.nodes import PromptNode, PromptModel\n",
+    "from haystack.preview.components.generators.hugging_face.hugging_face_local import HuggingFaceLocalGenerator\n",
     "\n",
     "model_id = 'meta-llama/Llama-2-7b-chat-hf'\n",
     "device = 'cuda'\n",
@@ -163,9 +161,43 @@
     "        'model_kwargs': {'load_in_8bit': True},\n",
     "        'device_map': 'auto'\n",
     "    }\n",
-    "    model = PromptModel(model_id, use_gpu=True, model_kwargs=model_kwargs)\n",
+    "    model = HuggingFaceLocalGenerator(model_id, device=device, pipeline_kwargs=model_kwargs)\n",
+    "    model.warm_up()\n",
     "else:\n",
     "    raise Exception('GPU not available')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating a Haystack V2 Pipeline\n",
+    "\n",
+    "The integration to Haystack V2 is done via `LMFormatEnforcerLocalGenerator`. It receives the local LLM model component and the Character Level Parser as parameters. Only the wrapped model is added to the pipeline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional\n",
+    "from haystack.preview import Pipeline\n",
+    "from lmformatenforcer.characterlevelparser import CharacterLevelParser\n",
+    "from lmformatenforcer.integrations.haystackv2 import LMFormatEnforcerLocalGenerator\n",
+    "\n",
+    "def build_pipeline(character_level_parser: Optional[CharacterLevelParser] = None):\n",
+    "    format_enforcer = LMFormatEnforcerLocalGenerator(model, character_level_parser)\n",
+    "    pipeline = Pipeline()\n",
+    "    pipeline.add_component(instance=format_enforcer, name='model')\n",
+    "    return pipeline\n",
+    "\n",
+    "def run_pipeline(pipeline, prompt):\n",
+    "    result = pipeline.run({\n",
+    "        \"model\": {\"prompt\": \"When was michael jordan born?\"}\n",
+    "    })\n",
+    "    return result['model']['replies'][0]\n"
    ]
   },
   {
@@ -186,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +243,7 @@
        "If a question does not make any sense, or is not factually coherent, explain why instead of answering something not correct. If you don't know the answer to a question, please don't share false information.\n",
        "<</SYS>>\n",
        "\n",
-       "Please give me information about {query}. You MUST answer using the following json schema: {{\"title\": \"AnswerFormat\", \"type\": \"object\", \"properties\": {{\"first_name\": {{\"title\": \"First Name\", \"type\": \"string\"}}, \"last_name\": {{\"title\": \"Last Name\", \"type\": \"string\"}}, \"year_of_birth\": {{\"title\": \"Year Of Birth\", \"type\": \"integer\"}}, \"num_seasons_in_nba\": {{\"title\": \"Num Seasons In Nba\", \"type\": \"integer\"}}}}, \"required\": [\"first_name\", \"last_name\", \"year_of_birth\", \"num_seasons_in_nba\"]}} [/INST]\n",
+       "Please give me information about Michael Jordan. You MUST answer using the following json schema: {\"title\": \"AnswerFormat\", \"type\": \"object\", \"properties\": {\"first_name\": {\"title\": \"First Name\", \"type\": \"string\"}, \"last_name\": {\"title\": \"Last Name\", \"type\": \"string\"}, \"year_of_birth\": {\"title\": \"Year Of Birth\", \"type\": \"integer\"}, \"num_seasons_in_nba\": {\"title\": \"Num Seasons In Nba\", \"type\": \"integer\"}}, \"required\": [\"first_name\", \"last_name\", \"year_of_birth\", \"num_seasons_in_nba\"]} [/INST]\n",
        "```"
       ],
       "text/plain": [
@@ -237,20 +269,9 @@
      "data": {
       "text/markdown": [
        "```\n",
-       "  Of course! I'd be happy to help you with information about Michael Jordan. Here is the information about him in the format you requested:\n",
        "\n",
-       "{\n",
-       "\"title\": \"Michael Jordan\",\n",
-       "\"type\": \"object\",\n",
-       "\"properties\": {\n",
-       "\"first_name\": {\n",
-       "\"title\": \"First Name\",\n",
-       "\"type\": \"string\",\n",
-       "\"value\": \"Michael\"\n",
-       "},\n",
-       "\"last_name\": {\n",
-       "\"title\": \"Last Name\",\n",
        "\n",
+       "Michael Jordan was born on February 17, 1963, in Fort Greene, Brooklyn, New York.\n",
        "```"
       ],
       "text/plain": [
@@ -273,15 +294,43 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/noamgat/mambaforge/envs/commentranker/lib/python3.10/site-packages/transformers/pipelines/base.py:1101: UserWarning: You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "text/markdown": [
        "```\n",
-       "  {\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "{\n",
        "\"first_name\": \"Michael\",\n",
        "\"last_name\": \"Jordan\",\n",
        "\"year_of_birth\": 1963,\n",
        "\"num_seasons_in_nba\": 15\n",
        "}\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
        "\n",
        "\n",
        "\n",
@@ -298,7 +347,6 @@
    ],
    "source": [
     "from lmformatenforcer import JsonSchemaParser\n",
-    "from lmformatenforcer.integrations.haystack import LMFormatEnforcerPromptNode\n",
     "from pydantic import BaseModel\n",
     "\n",
     "class AnswerFormat(BaseModel):\n",
@@ -307,25 +355,24 @@
     "    year_of_birth: int\n",
     "    num_seasons_in_nba: int\n",
     "\n",
-    "question = 'Please give me information about {query}. You MUST answer using the following json schema: '\n",
-    "schema_json_str = AnswerFormat.schema_json().replace(\"{\", \"{{\").replace(\"}\", \"}}\")\n",
+    "question = 'Please give me information about Michael Jordan. You MUST answer using the following json schema: '\n",
+    "schema_json_str = AnswerFormat.schema_json()\n",
     "question_with_schema = f'{question}{schema_json_str}'\n",
     "prompt = get_prompt(question_with_schema)\n",
     "\n",
-    "vanilla_node = PromptNode(model, prompt)\n",
-    "enforced_node = LMFormatEnforcerPromptNode(model, prompt, character_level_parser=JsonSchemaParser(AnswerFormat.schema()))\n",
-    "\n",
+    "vanilla_pipeline = build_pipeline(None)\n",
+    "enforced_pipeline = build_pipeline(JsonSchemaParser(AnswerFormat.schema()))\n",
     "\n",
     "display_header(\"Prompt:\")\n",
     "display_content(prompt)\n",
     "\n",
     "display_header(\"Answer, Without json schema enforcing:\")\n",
-    "result = vanilla_node(query='Michael Jordan')\n",
-    "display_content(result[0])\n",
+    "result = run_pipeline(vanilla_pipeline, prompt=prompt)\n",
+    "display_content(result)\n",
     "\n",
     "display_header(\"Answer, With json schema enforcing:\")\n",
-    "result = enforced_node(query='Michael Jordan')\n",
-    "display_content(result[0])\n"
+    "result = run_pipeline(enforced_pipeline, prompt=prompt)\n",
+    "display_content(result)\n"
    ]
   },
   {
@@ -339,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +411,7 @@
        "If a question does not make any sense, or is not factually coherent, explain why instead of answering something not correct. If you don't know the answer to a question, please don't share false information.\n",
        "<</SYS>>\n",
        "\n",
-       "When was {query} Born? Please answer in mm/dd/yyyy format. [/INST]\n",
+       "When was Michael Jordan Born? Please answer in mm/dd/yyyy format. [/INST]\n",
        "```"
       ],
       "text/plain": [
@@ -377,7 +424,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Answer, Without json schema enforcing:**"
+       "**Answer, Without regex enforcing:**"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -390,7 +437,8 @@
      "data": {
       "text/markdown": [
        "```\n",
-       "  Thank you for your question! Michael Jordan was born on February 17, 1963. I hope that helps! If you have any other questions, please feel free to ask.\n",
+       "\n",
+       "Michael Jordan was born on February 17, 1963, in Fort Greene, Brooklyn, New York, USA.\n",
        "```"
       ],
       "text/plain": [
@@ -403,7 +451,7 @@
     {
      "data": {
       "text/markdown": [
-       "**Answer, With json schema enforcing:**"
+       "**Answer, With regex enforcing:**"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -433,23 +481,23 @@
     "\n",
     "date_regex = r'(0?[1-9]|1[0-2])\\/(0?[1-9]|1\\d|2\\d|3[01])\\/(19|20)\\d{2}'\n",
     "answer_regex = ' In mm/dd/yyyy format, Michael Jordan was born in ' + date_regex\n",
-    "question = 'When was {query} Born? Please answer in mm/dd/yyyy format.'\n",
+    "question = 'When was Michael Jordan Born? Please answer in mm/dd/yyyy format.'\n",
     "prompt = get_prompt(question)\n",
     "\n",
-    "vanilla_node = PromptNode(model, prompt)\n",
-    "enforced_node = LMFormatEnforcerPromptNode(model, prompt, character_level_parser=RegexParser(answer_regex))\n",
+    "vanilla_pipeline = build_pipeline(None)\n",
+    "enforced_pipeline = build_pipeline(RegexParser(answer_regex))\n",
     "\n",
     "\n",
     "display_header(\"Prompt:\")\n",
     "display_content(prompt)\n",
     "\n",
-    "display_header(\"Answer, Without json schema enforcing:\")\n",
-    "result = vanilla_node(query='Michael Jordan')\n",
-    "display_content(result[0])\n",
+    "display_header(\"Answer, Without regex enforcing:\")\n",
+    "result = run_pipeline(vanilla_pipeline, question)\n",
+    "display_content(result)\n",
     "\n",
-    "display_header(\"Answer, With json schema enforcing:\")\n",
-    "result = enforced_node(query='Michael Jordan')\n",
-    "display_content(result[0])\n"
+    "display_header(\"Answer, With regex enforcing:\")\n",
+    "result = run_pipeline(enforced_pipeline, question)\n",
+    "display_content(result)\n"
    ]
   },
   {
