--- a/samples/colab_haystackv1_integration.ipynb
+++ b/samples/colab_haystackv1_integration.ipynb
@@ -298,7 +298,7 @@
    ],
    "source": [
     "from lmformatenforcer import JsonSchemaParser\n",
-    "from lmformatenforcer.integrations.haystack import LMFormatEnforcerPromptNode\n",
+    "from lmformatenforcer.integrations.haystackv1 import LMFormatEnforcerPromptNode\n",
     "from pydantic import BaseModel\n",
     "\n",
     "class AnswerFormat(BaseModel):\n",
