Updating sample notebooks to use huggingface's notebook login method to be easier to use.

--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -33,7 +33,6 @@
    "outputs": [],
    "source": [
     "!pip install transformers torch lm-format-enforcer huggingface_hub accelerate bitsandbytes cpm_kernels langchain langchain-experimental \n",
-    "!huggingface-cli login\n",
     "\n",
     "# When running from source / developing the library, use this instead\n",
     "# %load_ext autoreload\n",
@@ -42,6 +41,23 @@
     "# import os\n",
     "# sys.path.append(os.path.abspath('..'))\n",
     "# os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import notebook_login\n",
+    "notebook_login()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can create the model. This may take a few minutes."
    ]
   },
   {
