--- a/samples/colab_llamaindex_integration.ipynb
+++ b/samples/colab_llamaindex_integration.ipynb
@@ -140,7 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!huggingface-cli login"
+    "from huggingface_hub import notebook_login\n",
+    "notebook_login()"
    ]
   },
   {
