--- a/samples/colab_vllm_integration.ipynb
+++ b/samples/colab_vllm_integration.ipynb
@@ -41,7 +41,6 @@
    "outputs": [],
    "source": [
     "!pip install vllm lm-format-enforcer\n",
-    "!huggingface-cli login\n",
     "\n",
     "# When running from source / developing the library, use this instead\n",
     "# %load_ext autoreload\n",
@@ -50,6 +49,16 @@
     "# import os\n",
     "# sys.path.append(os.path.abspath('..'))\n",
     "## os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import notebook_login\n",
+    "notebook_login()"
    ]
   },
   {
