Minor fix in haystack v2 integration notebook

--- a/samples/colab_haystackv2_integration.ipynb
+++ b/samples/colab_haystackv2_integration.ipynb
@@ -195,7 +195,7 @@
     "\n",
     "def run_pipeline(pipeline, prompt):\n",
     "    result = pipeline.run({\n",
-    "        \"model\": {\"prompt\": \"When was michael jordan born?\"}\n",
+    "        \"model\": {\"prompt\": prompt}\n",
     "    })\n",
     "    return result['model']['replies'][0]\n"
    ]
