Correcting colab notebook imports

--- a/samples/colab_haystackv2_integration.ipynb
+++ b/samples/colab_haystackv2_integration.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install farm-haystack lm-format-enforcer accelerate bitsandbytes cpm_kernels huggingface_hub\n",
+    "!pip install farm-haystack[inference] lm-format-enforcer accelerate bitsandbytes cpm_kernels huggingface_hub\n",
     "\n",
     "# When running from source / developing the library, use this instead\n",
     "# %load_ext autoreload\n",
