--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -71,7 +71,7 @@
      "text": [
       "/home/noamgat/mambaforge/envs/commentranker/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [05:32<00:00, 166.33s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:02<00:00,  1.34s/it]\n"
      ]
     }
    ],
@@ -175,7 +175,8 @@
     "        num_beams: int = 1,\n",
     "        required_regex: Optional[str] = None,\n",
     "        required_str: Optional[str] = None,\n",
-    "        required_json_schema: Optional[dict] = None) -> Tuple[StringOrManyStrings, Optional[pd.DataFrame]]:\n",
+    "        required_json_schema: Optional[dict] = None,\n",
+    "        required_json_output: Optional[bool] = None) -> Tuple[StringOrManyStrings, Optional[pd.DataFrame]]:\n",
     "    is_multi_message = isinstance(message, list)\n",
     "    messages = message if is_multi_message else [message]\n",
     "    prompts = [get_prompt(msg, system_prompt) for msg in messages]\n",
@@ -201,6 +202,8 @@
     "        parser = StringParser(required_str)\n",
     "    if required_json_schema:\n",
     "        parser = JsonSchemaParser(required_json_schema)\n",
+    "    if required_json_output:\n",
+    "        parser = JsonSchemaParser(None)\n",
     "\n",
     "    if parser:\n",
     "        output = generate_enforced(model, tokenizer, parser, **generate_kwargs)\n",
@@ -227,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## JSON Use case\n",
+    "## JSON Schema Use case\n",
     "\n",
     "Now we demonstrate using ```JsonSchemaParser```. We create a pydantic model, generate the schema from it, and use that to enforce the format.\n",
     "The output will always be in a format that can be parsed by the parser."
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +283,12 @@
      "data": {
       "text/markdown": [
        "```\n",
-       "  { \"first_name\": \"Michael\", \"last_name\": \"Jordan\", \"year_of_birth\": 1963, \"num_seasons_in_nba\": 15 }\n",
+       "  {\n",
+       "\"first_name\": \"Michael\",\n",
+       "\"last_name\": \"Jordan\",\n",
+       "\"year_of_birth\": 1963,\n",
+       "\"num_seasons_in_nba\": 15\n",
+       "}\n",
        "```"
       ],
       "text/plain": [
@@ -306,14 +314,60 @@
      "data": {
       "text/markdown": [
        "```\n",
-       "  Of course! I'd be happy to help you with information about Michael Jordan. Here is the information in the format you requested:\n",
+       "  Of course, I'd be happy to provide information about Michael Jordan in the format you requested! Here is the information about Michael Jordan in the JSON schema format you provided:\n",
+       "\n",
        "{\n",
        "\"title\": \"AnswerFormat\",\n",
        "\"type\": \"object\",\n",
        "\"properties\": {\n",
-       "\"first_name\": {\"title\": \"First Name\", \"type\": \"string\"},\n",
-       "\"last_name\": {\"title\": \"Last Name\", \"type\": \"string\"},\n",
-       "\"year_of_birth\": {\"title\":\n",
+       "\"first_name\": {\n",
+       "\"title\": \"First Name\",\n",
+       "\"type\": \"string\",\n",
+       "\"description\": \"Michael Jordan's first name\"\n",
+       "},\n",
+       "\"last_name\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Answer, With json mode enforcing (json output, schemaless):**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "```\n",
+       "  {\n",
+       "\"title\": \"AnswerFormat\",\n",
+       "\"type\": \"object\",\n",
+       "\"properties\": {\n",
+       "\"first_name\": {\n",
+       "\"title\": \"First Name\",\n",
+       "\"type\": \"string\"\n",
+       "},\n",
+       "\"last_name\": {\n",
+       "\"title\": \"Last Name\",\n",
+       "\"type\": \"string\"\n",
+       "},\n",
+       "\"year_of_birth\": {\n",
+       "\"title\": \"Year Of Birth\",\n",
+       "\"type\": \"integer\"\n",
+       "},\n",
+       "\n",
        "```"
       ],
       "text/plain": [
@@ -358,6 +412,10 @@
     "\n",
     "display_header(\"Answer, Without json schema enforcing:\")\n",
     "result, _ = run(question_with_schema, system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS)\n",
+    "display_content(result)\n",
+    "\n",
+    "display_header(\"Answer, With json mode enforcing (json output, schemaless):\")\n",
+    "result, _ = run(question_with_schema, system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_json_output=True)\n",
     "display_content(result)\n",
     "\n"
    ]
