--- a/samples/colab_llamacpppython_integration.ipynb
+++ b/samples/colab_llamacpppython_integration.ipynb
@@ -231,26 +231,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Llama.generate: prefix-match hit\n",
       "\n",
-      "llama_print_timings:        load time = 16760.31 ms\n",
-      "llama_print_timings:      sample time =    35.14 ms /   102 runs   (    0.34 ms per token,  2902.92 tokens per second)\n",
-      "llama_print_timings: prompt eval time = 16760.24 ms /   294 tokens (   57.01 ms per token,    17.54 tokens per second)\n",
-      "llama_print_timings:        eval time = 10098.12 ms /   101 runs   (   99.98 ms per token,    10.00 tokens per second)\n",
-      "llama_print_timings:       total time = 27481.93 ms\n"
+      "llama_print_timings:        load time = 16719.92 ms\n",
+      "llama_print_timings:      sample time =    43.66 ms /   128 runs   (    0.34 ms per token,  2931.54 tokens per second)\n",
+      "llama_print_timings: prompt eval time =     0.00 ms /     1 tokens (    0.00 ms per token,      inf tokens per second)\n",
+      "llama_print_timings:        eval time = 11262.72 ms /   128 runs   (   87.99 ms per token,    11.36 tokens per second)\n",
+      "llama_print_timings:       total time = 11447.94 ms\n"
      ]
     },
     {
      "data": {
       "text/markdown": [
        "```\n",
-       "  Of course! I'd be happy to help you with information about Michael Jordan. Here is the answer in the format specified by the JSON schema:\n",
+       "  Of course! I'd be happy to provide information about Michael Jordan in a safe and respectful manner. Here is the answer in the format requested:\n",
        "{\n",
        "\"first_name\": \"Michael\",\n",
        "\"last_name\": \"Jordan\",\n",
        "\"year_of_birth\": 1963,\n",
        "\"num_seasons_in_nba\": 15\n",
        "}\n",
-       "I hope this helps! Let me know if you have any other questions.\n",
+       "Here are some key facts about Michael Jordan:\n",
+       "* First Name: Michael\n",
+       "* Last Name: Jordan\n",
+       "* Year of Birth: 1963\n",
+       "* Number of Seasons in the\n",
        "```"
       ],
       "text/plain": [
@@ -295,8 +300,56 @@
        "\"first_name\": \"Michael\",\n",
        "\"last_name\": \"Jordan\",\n",
        "\"year_of_birth\": 1963,\n",
-       "\"num_seasons_in_nba\": 15\n",
-       "}\n",
+       "\"num_seasons_in_nba\": 15 }\n",
+       "\n",
+       "\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Answer, With json mode (json output, no specific schema) enforcing:**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Llama.generate: prefix-match hit\n",
+      "\n",
+      "llama_print_timings:        load time = 16719.92 ms\n",
+      "llama_print_timings:      sample time =    42.56 ms /   128 runs   (    0.33 ms per token,  3007.80 tokens per second)\n",
+      "llama_print_timings: prompt eval time =     0.00 ms /     1 tokens (    0.00 ms per token,      inf tokens per second)\n",
+      "llama_print_timings:        eval time = 11260.41 ms /   128 runs   (   87.97 ms per token,    11.37 tokens per second)\n",
+      "llama_print_timings:       total time = 11722.26 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "```\n",
+       "  {\n",
+       "\"properties\": {\n",
+       "\"first_name\": {\"title\": \"First Name\", \"type\": \"string\"},\n",
+       "\"last_name\": {\"title\": \"Last Name\", \"type\": \"string\"},\n",
+       "\"year_of_birth\": {\"title\": \"Year Of Birth\", \"type\": \"integer\"},\n",
+       "\"num_seasons_in_nba\": {\"title\": \"Num Seasons In Nba\", \"type\": \"integer\"}\n",
+       "},\n",
+       "\"required\": [\"first_name\", \"last_name\", \"year_of_birth\", \"num_seasons_\n",
        "```"
       ],
       "text/plain": [
@@ -332,7 +385,11 @@
     "\n",
     "display_header(\"Answer, With json schema enforcing:\")\n",
     "result = llamacpp_with_character_level_parser(llm, prompt, JsonSchemaParser(AnswerFormat.schema()))\n",
-    "display_content(result)\n"
+    "display_content(result)\n",
+    "\n",
+    "display_header(\"Answer, With json mode (json output, no specific schema) enforcing:\")\n",
+    "result = llamacpp_with_character_level_parser(llm, prompt, JsonSchemaParser(None))\n",
+    "display_content(result)"
    ]
   },
   {
