Added some comments to the ExLlamaV2 notebook

--- a/samples/colab_exllamav2_integration.ipynb
+++ b/samples/colab_exllamav2_integration.ipynb
@@ -19,6 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Setting up the COLAB runtime (user action required)\n",
+    "\n",
+    "This colab-friendly notebook is targeted at demoing the enforcer on Llama2. It can run on a free GPU on Google Colab.\n",
+    "Make sure that your runtime is set to GPU:\n",
+    "\n",
+    "Menu Bar -> Runtime -> Change runtime type -> T4 GPU (at the time of writing this notebook). [Guide here](https://www.codesansar.com/deep-learning/using-free-gpu-tpu-google-colab.htm).\n",
+    "\n",
     "## Installing dependencies\n",
     "\n",
     "We begin by installing the dependencies.\n",
@@ -381,7 +388,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ExLlamaV2 + Regular Expressions Use Case"
+    "## ExLlamaV2 + Regular Expressions Use Case\n",
+    "\n",
+    "LM Format Enforcer can also be used to make sure that the output matches a regular expression."
    ]
   },
   {
