--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -13,26 +13,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Gathering huggingface credentials (user action required)\n",
-    "\n",
-    "We begin by installing the dependencies. This demo uses llama2, so you will have to create a free huggingface account, request access to the llama2 model, create an access token, and insert it when executing the next cell will request it.\n",
-    "\n",
-    "Links:\n",
-    "\n",
-    "- [Request access to llama model](https://huggingface.co/meta-llama/Llama-2-7b-chat-hf). See the \"Access Llama 2 on Hugging Face\" section.\n",
-    "- [Create huggingface access token](https://huggingface.co/settings/tokens)\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install transformers torch lm-format-enforcer huggingface_hub accelerate bitsandbytes cpm_kernels langchain langchain-experimental \n",
+    "!pip install transformers torch lm-format-enforcer huggingface_hub optimum langchain langchain-experimental\n",
+    "!pip install auto-gptq --extra-index-url https://huggingface.github.io/autogptq-index/whl/cu118/ \n",
     "\n",
     "# When running from source / developing the library, use this instead\n",
     "# %load_ext autoreload\n",
@@ -41,16 +28,6 @@
     "# import os\n",
     "# sys.path.append(os.path.abspath('..'))\n",
     "# os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from huggingface_hub import notebook_login\n",
-    "notebook_login()"
    ]
   },
   {
@@ -79,7 +56,7 @@
     "import torch\n",
     "from transformers import AutoConfig, AutoModelForCausalLM, AutoTokenizer\n",
     "\n",
-    "model_id = 'meta-llama/Llama-2-7b-chat-hf'\n",
+    "model_id = 'TheBloke/Llama-2-7b-Chat-GPTQ'\n",
     "device = 'cuda'\n",
     "\n",
     "if torch.cuda.is_available():\n",
